# AoC2021-SonarSweep

./: main.py  pyproject.toml
