[tool.poetry]
name = "aoc2021-sonarsweep"
version = "0.1.0"
description = ""
authors = ["Carlos Ardila <carlos.ardila@appgate.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
